--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>QR Code Generator</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="full-page">
     <form class="form">
-      <span class="title">QR Code Generator</span>
-      <p class="description">Enter your social media links to generate a QR code</p>
+      <span class="title">Generate Your QR Code</span>
+      <p class="description">Easily create a QR code for your social media links or any website you want to share. Just enter the URL below and click "Generate QR Code"</p>
       <div>
         <input placeholder="Enter your link" type="text" name="socialLinks" id="socialLinks">
         <br>
-        <button type="button" id="submitButton">Submit</button>
+        <button type="button" id="submitButton">Generate QR Code</button>
       </div>
     </form>
     <div id="preview"></div>
